--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,3 +4,6 @@
 systemd_unit_name: 'haproxy.service'
 package_name: 'haproxy'
 config_file_path: '/etc/haproxy/haproxy.cfg'
+
+# haproxy configuration
+publish_stats: 'true'
