--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,13 @@
 ---
 # install_and_configure_haproxy/tasks/main.yml
 
+- name: "Load variables"
+  ansible.builtin.include_vars: "{{ item }}"
+  with_first_found:
+    - "vars_{{ ansible_distribution | replace(' ', '_' ) }}{{ ansible_distribution_major_version }}.yml"
+    - "vars_{{ ansible_distribution | replace(' ', '_' ) }}.yml"
+    - "vars_{{ ansible_os_family }}.yml"
+
 - name: 'Install the haproxy package'
   ansible.builtin.package:
     name: "{{ package_name }}"
