handlers/main.yml: all task names starting with a Capital letter; adjusted notify in tasks/main.yml

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,7 +21,7 @@
     group: 'root'
     mode: '0600'
   notify:
-    - 'restart the haproxy service'
+    - 'Restart the haproxy service'
 
 - name: 'Start and enable the haproxy service'
   ansible.builtin.service:
